--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_gray">#888888</color>
+    <color name="continue_blue">#248AFF</color>
+    <color name="yellow_warning">#EEDA28</color>
+    <color name="red_error">#F44336</color>
 </resources>
